Unit test files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
     "extends": "airbnb-base",
+    "env": {
+        "node": true,
+        "mocha": true,
+        "es6": true
+    },
     "plugins": [
         "import"
     ],
