--- a/.nycrc
+++ b/.nycrc
@@ -1,7 +1,10 @@
 {
     "check-coverage": true,
     "per-file": true,
-    "lines": 0,
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
     "include": [
         "src/**/*.js"
     ],
