--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "./node_modules/.bin/nyc _mocha test/bootstrap.test.js test/",
-    "start": "node src/app.js",
+    "start": "node ./app.js",
     "lint": "./node_modules/.bin/eslint --fix src/**/*.js test/**/*.js",
     "precommit": "npm run lint",
     "prepush": "npm test"
