--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "./node_modules/.bin/nyc _mocha test/bootstrap.test.js test/",
+    "test": "nyc mocha test/bootstrap.test.js test/",
     "start": "node ./app.js",
-    "lint": "./node_modules/.bin/eslint --fix src/**/*.js test/**/*.js",
-    "precommit": "npm run lint",
-    "prepush": "npm test"
+    "lint": "eslint --fix src/**/*.js test/**/*.js"
+  },
+  "engines": {
+    "node": "^13.2.0",
+    "npm": "^6.13.1"
   },
   "author": "Eugene Wong",
-  "license": "MIT",
+  "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.1",
-    "eslint": "^4.4.0",
-    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "husky": "^0.14.3",
-    "mocha": "^3.5.0",
-    "nyc": "^11.1.0",
-    "sinon": "^3.0.0",
-    "sinon-chai": "^2.12.0"
+    "husky": "^3.1.0",
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0"
   }
 }
